--- a/index.html
+++ b/index.html
@@ -84,7 +84,10 @@
     <!--Aqui div de adicionar modelo e manipular objeto-->
     <div class="menu-div ms-3 d-flex flex-column align-items-center justify-content-evenly h-100 w-100">
       <form id="addModel" class="d-flex mt-3 flex-column align-items-center justify-content-center">
-        <input class="mb-3 form-control" type="file" id="file" name="file" accept=".obj">
+        <div class="d-flex">
+          <input class="mb-3 form-control" type="file" id="file" name="file" accept=".obj">
+          <input class="form-control mx-1" type="text" id="modelId" name="modelId" placeholder="modelID" required style="width: 70px; height: 38px">
+        </div>
         <button type="submit" class="btn btn-primary mb-3">Adicionar Modelo</button>
       </form>
     </div>
